# capstone1_ROS_gazebo

./: README.md
src/ball_detection/: CMakeLists.txt
src/ball_detection/src/: ball_detect.cpp  obstacle_detect.back.cpp  obstacle_detect.cpp
src/core_msgs/: CMakeLists.txt
src/core_msgs/msg/: robot_position.msg
src/data_integrate/launch/: ball_harvesting_run.launch  system_run.launch
src/data_integrate/src/: data_integration.cpp  data_show.cpp.back
src/field_detection/: CMakeLists.txt
src/field_detection/src/: ball_detect.cpp  dead_reckoning.cpp
src/junny_control/config/: model13.yaml  model15.yaml  model16.yaml
src/junny_control/launch/: model13_control.launch  model15_control.launch  model16_control.launch
src/line_tracing/: CMakeLists.txt
src/line_tracing/launch/: line_detect.launch
src/line_tracing/src/: line_detect.cpp  line_detect_actuation.cpp
src/line_tracker/: CMakeLists.txt  package.xml
src/line_tracker/src/: line_detect.cpp
src/model13/: CMakeLists.txt  package.xml
src/model13/launch/: display.launch  gazebo.launch  gazebo2.launch
src/model13/meshes/: base_link.STL  imu.STL  left_front_wheel.STL  left_front_wheel_motor.STL  left_rear_wheel.STL  left_rear_wheel_motor.STL  lidar.STL  pusher .STL  right_front_wheel.STL  right_front_wheel_motor.STL  right_rear_wheel.STL  right_rear_wheel_motor.STL
src/model13/urdf/: model13.csv  model13.urdf.xacro
src/model15/: CMakeLists.txt  package.xml
src/model15/launch/: display.launch  gazebo.launch  gazebo2.launch
src/model16/: CMakeLists.txt  package.xml
(+13 files in other folders)
